--- a/loading-screens/circle/circle-modern/index.html
+++ b/loading-screens/circle/circle-modern/index.html
@@ -1,5 +1,6 @@
   <!-- wrapper -->
   <div class="loading-screen">
+    <!-- inner wrapper -->
     <div class="inner-wrapper">
     <!-- loading animation element -->
       <div class="loading-circle"></div>
